--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,57 @@
+# Dependencies
 node_modules
 
+# Environment variables
 .env
 .env.local
 .env.*.local
 .env.production
 
-package-lock.json
+# Build outputs
+dist/
+build/
 
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pglite-debug*.log
+lerna-debug.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+*~
+
+# IDE
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Temporary files
+*.tmp
+*.temp
 src.zip
 
-dist/
+# Backup files (arquivos com " 2" no nome)
+* 2.*
+* 2.js
+* 2.ts
+* 2.tsx
+* 2.css
+* 2.json
+* 2.toml
+* 2.yaml
+* 2.yml
+
+# Coverage
+coverage/
+.nyc_output/
+
+# Misc
+.cache/
+.temp/
