--- a/env.example
+++ b/env.example
@@ -1,12 +1,54 @@
-# Azure AD Configuration
-VITE_AZURE_CLIENT_ID=21f52d49-5e17-4d39-b05c-8a3f355ecbc9
-VITE_AZURE_REDIRECT_URI=https://132-sealogistics.netlify.app/auth/callback
-VITE_BACKEND_URL=https://one32-sealogistics.onrender.com
+# ============================================
+# CONFIGURAÇÃO DO AMBIENTE - Sea Logistics
+# ============================================
+# Copie este arquivo para .env e preencha com seus valores reais
+# NUNCA commite o arquivo .env no repositório!
 
+# --------------------------------------------
+# Azure AD / Microsoft 365 Configuration
+# --------------------------------------------
+# Client ID da aplicação registrada no Azure AD
+# Necessário para integração com Excel/OneDrive
+VITE_AZURE_CLIENT_ID=your_azure_client_id_here
+
+# URI de redirecionamento após autenticação Azure
+# Deve corresponder ao configurado no Azure Portal
+VITE_AZURE_REDIRECT_URI=https://your-domain.netlify.app/auth/callback
+
+# URL do backend/servidor da aplicação
+VITE_BACKEND_URL=https://your-backend-url.onrender.com
+
+# --------------------------------------------
 # Firebase Configuration
+# --------------------------------------------
+# Chave da API do Firebase (encontrada no Firebase Console)
 VITE_FIREBASE_API_KEY=your_firebase_api_key
+
+# Domínio de autenticação do Firebase
 VITE_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+
+# ID do projeto Firebase
 VITE_FIREBASE_PROJECT_ID=your-project-id
+
+# Bucket de armazenamento do Firebase
 VITE_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
+
+# ID do remetente de mensagens Firebase
 VITE_FIREBASE_MESSAGING_SENDER_ID=123456789
+
+# ID da aplicação Firebase
 VITE_FIREBASE_APP_ID=your_app_id
+
+# --------------------------------------------
+# WhatsApp Configuration (Opcional)
+# --------------------------------------------
+# URL do servidor WhatsApp Business API
+# VITE_WHATSAPP_SERVER_URL=http://localhost:3001
+
+# --------------------------------------------
+# Email Configuration (Opcional)
+# --------------------------------------------
+# Configurações do EmailJS ou Nodemailer
+# VITE_EMAILJS_SERVICE_ID=your_service_id
+# VITE_EMAILJS_TEMPLATE_ID=your_template_id
+# VITE_EMAILJS_PUBLIC_KEY=your_public_key
